fix: github action with config

--- a/.github/workflows/valid.yml
+++ b/.github/workflows/valid.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           build: npm run build
           start: npm run serve
-          config-file: false
+          config-file: true
