fix: fix config base url

--- a/.github/workflows/valid.yml
+++ b/.github/workflows/valid.yml
@@ -13,4 +13,5 @@ jobs:
         with:
           build: npm run build
           start: npm run serve
-          config-file: true
+          wait-on: 'http://localhost:3000'
+          config: baseUrl=http://localhost:3000
